<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edPlaylistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_playlist_name"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txtPlaylistNameFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textColor="#D50000"
            android:textStyle="bold|italic"
            android:visibility="gone"
            android:text="@string/txt_invalid_playlist_name" />

        <EditText
            android:id="@+id/edPlaylistDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_playlist_description"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/checkPlaylistPublic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/check_playlist_public" />

        <CheckBox
            android:id="@+id/checkPlaylistCollaborative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_playlist_collaborative" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>